--- a/htmls/Interests.html
+++ b/htmls/Interests.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/index.css" type="text/css">
-    <link rel="stylesheet" href="../css/slideshow/colorbox.css" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka+One">
 </head>
 
 <body class="InterestsPage">
@@ -47,6 +45,9 @@
                                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                                     <li data-target="#myCarousel" data-slide-to="1"></li>
                                     <li data-target="#myCarousel" data-slide-to="2"></li>
+                                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                                    <li data-target="#myCarousel" data-slide-to="4"></li>
+                                    <li data-target="#myCarousel" data-slide-to="5"></li>
                                 </ol>
 
                                 <!-- Wrapper for slides -->
@@ -69,6 +70,27 @@
                                         <img src="{{interest.skill[0].images[2].full}}" alt="Books" class="img-responsive img-thumbnail">
                                         <div class="carousel-caption">
                                             <p class="description">{{interest.skill[0].description3}}</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item">
+                                        <img src="{{interest.skill[0].images[3].full}}" alt="Books" class="img-responsive img-thumbnail">
+                                        <div class="carousel-caption">
+                                            <p class="description">{{interest.skill[0].description4}}</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item">
+                                        <img src="{{interest.skill[0].images[4].full}}" alt="Kindle" class="img-responsive img-thumbnail">
+                                        <div class="carousel-caption">
+                                            <p class="description"></p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item">
+                                        <img src="{{interest.skill[0].images[5].full}}" alt="Books" class="img-responsive img-thumbnail">
+                                        <div class="carousel-caption">
+                                            <p class="description"></p>
                                         </div>
                                     </div>
                                 </div>
@@ -121,7 +143,6 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/angular.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
-    <script type="text/javascript" src="../js/jquery.colorbox-min.js"></script>
     <script type="text/javascript" src="../js/common.js"></script>
 </body>
 
