--- a/htmls/Experience.html
+++ b/htmls/Experience.html
@@ -34,9 +34,9 @@
                         <li ng-class="{active:panel.isSelected(3)}">
                             <a href ng-click="panel.selectTab(3)">{{company.company[1].name}}</a>
                         </li>
-                        <li ng-class="{active:panel.isSelected(4)}">
+                        <!-- <li ng-class="{active:panel.isSelected(4)}">
                             <a href ng-click="panel.selectTab(4)">{{company.company[2].name}}</a>
-                        </li>
+                        </li> -->
                     </ul>
                     <div class="panel" ng-show="panel.isSelected(1)">
                         <center>
@@ -241,11 +241,14 @@
     <footer class="container-fluid text-center">
         <footer-div></footer-div>
     </footer>
+    <div class="bg_load"></div>
+    <div class="wrapper"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/angular.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="../js/common.js"></script>
     <script type="text/javascript">
         $(function() {
             $.getJSON('exp_data.json', function(data) {
