--- a/htmls/Interests.html
+++ b/htmls/Interests.html
@@ -10,7 +10,6 @@
 </head>
 
 <body class="InterestsPage">
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
     <navigation-div>
     </navigation-div>
@@ -139,6 +138,8 @@
     <footer class="container-fluid text-center">
         <footer-div></footer-div>
     </footer>
+    <div class="bg_load"></div>
+    <div class="wrapper"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/angular.min.js"></script>
