--- a/htmls/Skills.html
+++ b/htmls/Skills.html
@@ -217,6 +217,8 @@
     <footer class="container-fluid text-center">
         <footer-div></footer-div>
     </footer>
+    <div class="bg_load"></div>
+    <div class="wrapper"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/angular.min.js"></script>
